# py-project-template

./: LICENSE  README.md  pyproject.toml
tests/: test_py_project_template.py
